--- a/content/20170302.md
+++ b/content/20170302.md
@@ -5,9 +5,11 @@ Tags:
 Slug: w2
 Author: 40423103
 
-第二週
+繪製四連桿機構，並導入V-rep
 
 <!-- PELICAN_END_SUMMARY -->
+
+先利用SolveSpace繪製四連桿機構，再導入V-rep進行動態模擬
 
 ##1. 30桿鍵
 
