--- a/content/20170223.md
+++ b/content/20170223.md
@@ -5,13 +5,15 @@ Tags:
 Slug: w1
 Author: 40423103
 
-第一週
+下載新版可攜程式系統，設定Stunnel.conf
 
 <!-- PELICAN_END_SUMMARY -->
 
 ##1. 下載<a href="http://service.mde.tw/public/tiny2017_1GB.7z">可攜程式系統 (1GB)</a>
+
 ##2. 設定 Stunnel.conf 的 IP
 
-設定影片
+###設定影片
+
 <iframe src="https://player.vimeo.com/video/209672409" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/209672409">Stunnel</a> from <a href="https://vimeo.com/user45467634">劉怡萱</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
