--- a/content/20170330.md
+++ b/content/20170330.md
@@ -13,7 +13,7 @@ Github <a href="https://help.github.com/articles/page-build-failed-tag-not-prope
 
 到 clone下來的倉儲資料夾 plugin\liquid_tags 裡面的 Readme.md 檔案
 
-將所有大括號改成兩個 ("{" →"{{"，"}"→"}}")
+將所有大括號改成兩個
 
 ###修改後的程式碼
 
