--- a/content/20170316.md
+++ b/content/20170316.md
@@ -5,7 +5,17 @@ Tags:
 Slug: w4
 Author: 40423103
 
-
+Start.bat 設定
 
 <!-- PELICAN_END_SUMMARY -->
 
+###修改 Start.bat，讓批次檔可以在開啟時自動搜尋電腦 IP 然後修改 stunnel.conf 並開啟 fossil 倉儲
+
+最後會開啟課程投影片、課程 fosill 倉儲、課程 Vimeo、課程部落格，我後來改成開小組 fossil 和課程部落格
+
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">
+chrome https://%NetworkIP% https://mde2a2.kmol.info/cdag2/home  http://mde.tw/2017springwcm/blog/ 
+Exit
+</pre>
+
+###設定影片
