--- a/content/20170316.md
+++ b/content/20170316.md
@@ -19,3 +19,5 @@ Exit
 </pre>
 
 ###設定影片
+
+<iframe src="https://player.vimeo.com/video/213013807" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/213013807">Start.bat 設定</a> from <a href="https://vimeo.com/user45467634">劉怡萱</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
