--- a/content/20170427.md
+++ b/content/20170427.md
@@ -11,7 +11,8 @@ Author: 40423103
 
 <!-- 導入 Brython 標準程式庫 -->
  
-<script type="./../data/Brython-3.3.1/brython.js" src="./../data/Brython-3.3.1/brython_stdlib.js"></script>
+<script type="./../data/Brython-3.3.1/brython.js" ></script>
+<script src="./../data/Brython-3.3.1/brython_stdlib.js"></script>
  
 <!-- 啟動 Brython -->
  
@@ -23,20 +24,18 @@ brython(1);
 
  
  <!-- 以下實際利用  Brython 畫四連桿 trace point 路徑-->
- <canvas id="add" width="600" height="400"></canvas>
+ <canvas id="w10" width="600" height="400"></canvas>
   
 <script type="text/python3">
 from browser import document as doc
 from browser import html
 import math
 # 準備繪圖畫布
-canvas = doc["add"]
+canvas = doc["w10"]
+degree = math.pi/180
+a = imput("give me a")
+add <=str(math.cos(60*degree)) 
 
-import add
-
-sum = add.add(1,2)
-
-print("a+b=",sum)
 
 
 
