--- a/content/20170427.md
+++ b/content/20170427.md
@@ -24,7 +24,7 @@ brython(1);
 
  
  <!-- 以下實際利用  Brython 畫四連桿 trace point 路徑-->
- <canvas id="w10" width="600" height="400"></canvas>
+<div id="w10" width="600" height="400"></div>
   
 <script type="text/python3">
 from browser import document as doc
