--- a/content/20170427.md
+++ b/content/20170427.md
@@ -9,6 +9,8 @@ Brython
 
 <!-- PELICAN_END_SUMMARY -->
 
+導入cdw10/add.py
+
 <!-- 導入 Brython 標準程式庫 -->
  
 <script type="./../data/Brython-3.3.1/brython.js" ></script>
