--- a/content/20170427.md
+++ b/content/20170427.md
@@ -9,7 +9,7 @@ Brython
 
 <!-- PELICAN_END_SUMMARY -->
 
-導入cdw10/add.py
+##導入cdw10/add.py
 
 <!-- 導入 Brython 標準程式庫 -->
  
@@ -25,7 +25,7 @@ brython(1);
 </script>
 
  
- <!-- 以下實際利用  Brython 畫四連桿 trace point 路徑-->
+ <!-- 以下實際利用  Brython -->
 <div id="w10" width="600" height="400"></div>
   
 <script type="text/python3">
@@ -33,7 +33,7 @@ from browser import document as doc
 from browser import html
 import math
 # 準備繪圖畫布
-canvas = doc["w10"]
+w10 = doc["w10"]
 degree = math.pi/180
 w10 <=str(math.cos(60*degree)) 
 
