--- a/content/20170427.md
+++ b/content/20170427.md
@@ -9,7 +9,8 @@ Brython
 
 <!-- PELICAN_END_SUMMARY -->
 
-##導入cdw10/add.py
+##git submodule cdw10
+##導入 cdw10/add.py
 
 <!-- 導入 Brython 標準程式庫 -->
  
@@ -36,6 +37,7 @@ import math
 w10 = doc["w10"]
 degree = math.pi/180
 w10 <=str(math.cos(60*degree)) 
+print (w10)
 
 
 
