--- a/content/20170427.md
+++ b/content/20170427.md
@@ -9,7 +9,7 @@ Brython
 
 <!-- PELICAN_END_SUMMARY -->
 
-##git submodule cdw10
+##submodule add cdw10
 ##導入 cdw10/add.py
 
 <!-- 導入 Brython 標準程式庫 -->
@@ -27,17 +27,17 @@ brython(1);
 
  
  <!-- 以下實際利用  Brython -->
-<div id="w10" width="600" height="400"></div>
+<div id="add" width="600" height="400"></div>
   
 <script type="text/python3">
 from browser import document as doc
 from browser import html
 import math
 # 準備繪圖畫布
-w10 = doc["w10"]
+add = doc["add"]
 degree = math.pi/180
 w10 <=str(math.cos(60*degree)) 
-print (w10)
+add<=w10
 
 
 
