--- a/content/20170427.md
+++ b/content/20170427.md
@@ -5,12 +5,12 @@ Tags:
 Slug: w10
 Author: 40423103
 
-Brython
+###Brython
 
 <!-- PELICAN_END_SUMMARY -->
 
 ##submodule add cdw10
-##導入 cdw10/add.py
+##導入  cdw10/add.py
 
 <!-- 導入 Brython 標準程式庫 -->
  
@@ -33,11 +33,24 @@ brython(1);
 from browser import document as doc
 from browser import html
 import math
-# 準備繪圖畫布
-add = doc["add"]
-degree = math.pi/180
-w10 <=str(math.cos(60*degree)) 
-add<=w10
+# All the elements will be inserted in the div with the "zone" id
+zone = document['zone']
+
+# We create a new div element
+newdiv = html.DIV(Id = "new-div")
+# Now we add some style
+newdiv.style = {"padding": "5px",
+           "backgroundColor": "#ADD8E6"}
+
+# We create a new link and add the link to a string
+blink = html.A('brython',href="http://brython.info")
+text = "Brython is really cool, look at "+ blink + " for more"
+
+# Now we add the text to the div with id="new-div"
+newdiv <= html.DIV(text)
+
+# Finally, we add the newdiv to the outer div with id="zone"
+zone <= newdiv
 
 
 
