--- a/content/20170427.md
+++ b/content/20170427.md
@@ -27,7 +27,7 @@ brython(1);
 
  
  <!-- 以下實際利用  Brython -->
-<div id="add" width="600" height="400"></div>
+<div id="zone" width="600" height="400"></div>
   
 <script type="text/python3">
 from browser import document as doc
