--- a/content/20170427.md
+++ b/content/20170427.md
@@ -14,45 +14,35 @@ Author: 40423103
 
 <!-- 導入 Brython 標準程式庫 -->
  
-<script type="./../data/Brython-3.3.1/brython.js" ></script>
-<script src="./../data/Brython-3.3.1/brython_stdlib.js"></script>
+<script src="../data/Brython-3.3.1/brython.js"></script>
+<script src="../data/Brython-3.3.1/brython_stdlib.js"></script>
  
 <!-- 啟動 Brython -->
- 
 <script>
 window.onload=function(){
-brython(1);
+// 設定 data/py 為共用程式路徑
+brython({debug:1, pythonpath:['./../cdw10']});
 }
 </script>
-
  
- <!-- 以下實際利用  Brython -->
-<div id="zone" width="600" height="400"></div>
-  
+<!-- 以下實際利用  Brython 畫四連桿 trace point 路徑-->
+<!--<canvas id="w10" width="800" height="600"></canvas>-->
+
+<div id="container" width="600" height="400"></div>
+ 
 <script type="text/python3">
 from browser import document as doc
 from browser import html
 import math
-# All the elements will be inserted in the div with the "zone" id
-zone = document['zone']
+import add
+container = doc['container']
 
-# We create a new div element
-newdiv = html.DIV(Id = "new-div")
-# Now we add some style
-newdiv.style = {"padding": "5px",
-           "backgroundColor": "#ADD8E6"}
+degree = math.pi/180
 
-# We create a new link and add the link to a string
-blink = html.A('brython',href="http://brython.info")
-text = "Brython is really cool, look at "+ blink + " for more"
-
-# Now we add the text to the div with id="new-div"
-newdiv <= html.DIV(text)
-
-# Finally, we add the newdiv to the outer div with id="zone"
-zone <= newdiv
-
-
+a = 1
+b = 2
+sum = add.add(a, b)
+container <= str(math.cos(60*degree)+float(sum))
 
 
 
