--- a/content/20170427.md
+++ b/content/20170427.md
@@ -21,28 +21,27 @@ Author: 40423103
 <script>
 window.onload=function(){
 // 設定 data/py 為共用程式路徑
-brython({debug:1, pythonpath:['./../cdw10']});
+brython({debug:1, pythonpath:['./../data/py']});
 }
 </script>
  
 <!-- 以下實際利用  Brython 畫四連桿 trace point 路徑-->
 <!--<canvas id="w10" width="800" height="600"></canvas>-->
-
+ 
 <div id="container" width="600" height="400"></div>
  
 <script type="text/python3">
 from browser import document as doc
 from browser import html
 import math
-import add
 container = doc['container']
-
 degree = math.pi/180
-
-a = 1
-b = 2
-sum = add.add(a, b)
-container <= str(math.cos(60*degree)+float(sum))
+def button1(event):
+    a = input("give me a")
+    container <= str(math.cos(60*degree)+float(a))
+doc["button1"].bind("click", button1)
+</script>
+<button id="button1">按下取 a 值</button>
 
 
 
