--- a/content/20170427.md
+++ b/content/20170427.md
@@ -36,11 +36,10 @@ import math
 import add
 container = doc['container']
 
-degree=math.pi/180
 a=1
 b=2
 sum=add.add(a,b)
-container <= str(math.cos(60*degree)+float(sum))
+container <= str(math.float(sum))
 
 </script>
 
