--- a/content/20170427.md
+++ b/content/20170427.md
@@ -39,7 +39,7 @@ container = doc['container']
 a=1
 b=2
 sum=add.add(a,b)
-container <= str(math.float(sum))
+container <= str(math.sum)
 
 </script>
 
