--- a/content/20170427.md
+++ b/content/20170427.md
@@ -36,10 +36,14 @@ import math
 import add
 container = doc['container']
 
-a=1
-b=2
-sum=add.add(a,b)
+def button1(event):
+    a=input("a=")
+def button2(event):
+    b=input("b=")
+sum=add.add(float(a),float(b))
 container <= str(sum)
+doc["button1"].bind("click", button1)
+doc["button2"].bind("click", button2)
 
 </script>
 
