--- a/content/20170427.md
+++ b/content/20170427.md
@@ -38,14 +38,13 @@ container = doc['container']
 
 def button1(event):
     a=input("a=")
-def button2(event):
-    b=input("b=")
-sum=add.add(float(a),float(b))
+b=2
+sum=add.add(a,b)
 container <= str(sum)
 doc["button1"].bind("click", button1)
-doc["button2"].bind("click", button2)
+
 <button id="button1">按下取 a 值</button>
-<button id="button2">按下取 b 值</button>
+
 </script>
 
 
