--- a/content/20170427.md
+++ b/content/20170427.md
@@ -37,16 +37,15 @@ import add
 container = doc['container']
 
 def button1(event):
-    a=input("a=")
-b=2
+    x=input("a=")
+    y=input("b=")
+a=float(x)
+b=float(y)
 sum=add.add(a,b)
 container <= str(sum)
 doc["button1"].bind("click", button1)
-
-<button id="button1">按下取 a 值</button>
-
 </script>
 
-
+<button id="button1">按下取 a 值</button>
 
 
