--- a/content/20170427.md
+++ b/content/20170427.md
@@ -37,9 +37,10 @@ import add
 container = doc['container']
 
 def button1(event):
-    a=input("give me a")
+    x=input("give me a")
 b=2
-sum=add.add(float(a),b)
+x=float(a)
+sum=add.add(a,b)
 container <= str(sum)
 doc["button1"].bind("click", button1)
 </script>
