--- a/content/20170427.md
+++ b/content/20170427.md
@@ -41,10 +41,10 @@ def button1(event):
 a=1
 b=2
 sum=add.add(a,b)
-container <= str(math.sum+float(x))
+container <= str(sum+float(x))
 doc["button1"].bind("click", button1)
 </script>
 
-<button id="button1">按下取 a 值</button>
+<button id="button1">按下取 x值</button>
 
 
