--- a/content/20170427.md
+++ b/content/20170427.md
@@ -41,7 +41,7 @@ def button1(event):
 a=1
 b=2
 sum=add.add(a,b)
-container <= str(sum+float(x))
+container <= str(sum,float(x))
 doc["button1"].bind("click", button1)
 </script>
 
