--- a/content/20170427.md
+++ b/content/20170427.md
@@ -36,15 +36,12 @@ import math
 import add
 container = doc['container']
 
+degree = math.pi/180
 def button1(event):
-    x=input("give me x")
-a=1
-b=2
-sum=add.add(a,b)
-container <= str(sum,float(x))
+    a = input("give me a")
+    container <= str(math.cos(60*degree)+float(a))
 doc["button1"].bind("click", button1)
 </script>
-
-<button id="button1">按下取 x值</button>
+<button id="button1">按下取 a 值</button>
 
 
