--- a/content/20170427.md
+++ b/content/20170427.md
@@ -38,10 +38,10 @@ container = doc['container']
 
 degree = math.pi/180
 def button1(event):
-    a = input("give me a")
-    container <= str(math.cos(60*degree)+float(a))
+    x = input("give me a")
+    container <= str(math.cos(60*degree)+float(x))
 doc["button1"].bind("click", button1)
 </script>
-<button id="button1">按下取 a 值</button>
+<button id="button1">按下取 x 值</button>
 
 
