--- a/content/20170427.md
+++ b/content/20170427.md
@@ -37,9 +37,12 @@ import add
 container = doc['container']
 
 degree = math.pi/180
+a=1
+b=2
+sum=add.add(a+b)
 def button1(event):
-    x = input("give me a")
-    container <= str(math.cos(60*degree)+float(x))
+    x = input("give me x")
+    container <= str(math.cos(60*degree)+sum+float(x))
 doc["button1"].bind("click", button1)
 </script>
 <button id="button1">按下取 x 值</button>
