--- a/content/20170427.md
+++ b/content/20170427.md
@@ -42,7 +42,7 @@ b=2
 sum=add.add(a+b)
 def button1(event):
     x = input("give me x")
-    container <= str(math.cos(60*degree)+sum+float(x))
+    container <= str(math.sum+cos(60*degree)+float(x))
 doc["button1"].bind("click", button1)
 </script>
 <button id="button1">按下取 x 值</button>
