--- a/content/20170427.md
+++ b/content/20170427.md
@@ -39,7 +39,7 @@ container = doc['container']
 degree = math.pi/180
 a=1
 b=2
-sum=add.add(a+b)
+sum=add.add(a,b)
 def button1(event):
     x = input("give me x")
     container <= str(math.cos(60*degree)+float(x)+float(sum))
