--- a/content/20170427.md
+++ b/content/20170427.md
@@ -38,12 +38,11 @@ container = doc['container']
 
 degree = math.pi/180
 a=x
-b=y
+b=2
 sum=add.add(a,b)
 def button1(event):
     x = input("give me x")
-    y = input("give me y")
-    container <= str(float(sum))
+    container <= str(sum)
 doc["button1"].bind("click", button1)
 </script>
 <button id="button1">按下取值</button>
