--- a/content/20170427.md
+++ b/content/20170427.md
@@ -9,8 +9,7 @@ Author: 40423103
 
 <!-- PELICAN_END_SUMMARY -->
 
-##submodule add cdw10
-##導入  cdw10/add.py
+###將cdw10增加到子目錄，導入add.py，利用Brython顯示出來
 
 <!-- 導入 Brython 標準程式庫 -->
  
@@ -20,7 +19,7 @@ Author: 40423103
 <!-- 啟動 Brython -->
 <script>
 window.onload=function(){
-// 設定 data/py 為共用程式路徑
+// 設定 cdw10 為共用程式路徑
 brython({debug:1, pythonpath:['./../cdw10']});
 }
 </script>
@@ -44,5 +43,37 @@ container <= str(sum)
 
 </script>
 
+###程式碼
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">
+<!-- 導入 Brython 標準程式庫 -->
+ 
+<script src="../data/Brython-3.3.1/brython.js"></script>
+<script src="../data/Brython-3.3.1/brython_stdlib.js"></script>
+ 
+<!-- 啟動 Brython -->
+<script>
+window.onload=function(){
+// 設定 cdw10 為共用程式路徑
+brython({debug:1, pythonpath:['./../cdw10']});
+}
+</script>
+ 
+<!-- 以下實際利用  Brython -->
+ 
+<div id="container" width="600" height="400"></div>
+ 
+<script type="text/python3">
+from browser import document as doc
+from browser import html
+import math
+import add
+container = doc['container']
 
+a=1
+b=2
+sum=add.add(a,b)
 
+container <= str(sum)
+
+</script>
+</pre>
