--- a/content/20170427.md
+++ b/content/20170427.md
@@ -5,7 +5,7 @@ Tags:
 Slug: w10
 Author: 40423103
 
-###將cdw10增加到子目錄，導入add.py，利用Brython顯示出來
+##將 cdw10 增加為子目錄，導入 add.py，利用 Brython 顯示出來
 
 <!-- PELICAN_END_SUMMARY -->
 
@@ -77,3 +77,70 @@ container <= str(sum)
 
 </script>
 </pre>
+
+
+##從 /data/w10 導入加減乘除程式，利用 Brython 顯示
+
+
+<!-- 導入 Brython 標準程式庫 -->
+ 
+<script src="../data/Brython-3.3.1/brython.js"></script>
+<script src="../data/Brython-3.3.1/brython_stdlib.js"></script>
+ 
+<!-- 啟動 Brython -->
+<script>
+window.onload=function(){
+// 設定 cdw10 為共用程式路徑
+brython({debug:1, pythonpath:['./../data/w10']});
+}
+</script>
+ 
+<!-- 以下實際利用  Brython -->
+ 
+<div id="count" width="600" height="400"></div>
+ 
+<script type="text/python3">
+from browser import document as doc
+from browser import html
+import math
+import add
+import times
+import minus
+import divide
+count = doc['count']
+
+a=1
+b=2
+
+sum1=add.add(a,b)
+sum2=minus.minus(a,b)
+sum3=times.times(a,b)
+sum4=divide.divide(a,b)
+
+
+count <= str(sum1,sum2,sum3,sum4)
+
+</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
