--- a/content/20170427.md
+++ b/content/20170427.md
@@ -5,11 +5,12 @@ Tags:
 Slug: w10
 Author: 40423103
 
-##將 cdw10 增加為子目錄，導入 add.py，利用 Brython 顯示出來
+利用 Brython 顯示加減乘除程式結果
+
 
 <!-- PELICAN_END_SUMMARY -->
 
-
+##1. 將 cdw10 增加為子目錄，導入 add.py，利用 Brython 顯示出來
 
 <!-- 導入 Brython 標準程式庫 -->
  
@@ -79,7 +80,7 @@ container <= str(sum)
 </pre>
 
 
-##從 /data/w10 導入加減乘除程式，利用 Brython 顯示
+##2. 從 /data/w10 導入加減乘除程式，利用 Brython 顯示
 
 
 <!-- 導入 Brython 標準程式庫 -->
@@ -118,12 +119,12 @@ sum3=times.times(a,b)
 sum4=divide.divide(a,b)
 
 
-count <= str(sum1,sum2,sum3,sum4)
+count <= str(sum3)
 
 </script>
 
 
-##近端加減乘除程式執行影片
+##3. 近端加減乘除程式執行影片
 
 <iframe src="https://player.vimeo.com/video/214948749" width="640" height="347" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 <p><a href="https://vimeo.com/214948749">國立虎尾科技大學機械設計工程系_ag2-加減乘除</a> from <a href="https://vimeo.com/user45467634">劉怡萱</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
