--- a/content/20170427.md
+++ b/content/20170427.md
@@ -75,6 +75,7 @@ b=2
 sum=add.add(a,b)
 
 container <= str(sum)
+print(sum)
 
 </script>
 </pre>
@@ -119,7 +120,7 @@ sum3=times.times(a,b)
 sum4=divide.divide(a,b)
 
 
-count <= str(sum3)
+count <= str(sum4)
 
 </script>
 
