--- a/content/20170427.md
+++ b/content/20170427.md
@@ -120,7 +120,7 @@ sum3=times.times(a,b)
 sum4=divide.divide(a,b)
 
 
-count <= str(sum1),str(sum2),str(sum3),str(sum4)
+print( str(sum1),str(sum2),str(sum3),str(sum4))
 
 </script>
 
