--- a/content/20170427.md
+++ b/content/20170427.md
@@ -109,16 +109,22 @@ import add
 import times
 import minus
 import divide
-import app
 count = doc['count']
 
 a=1
 b=2
 
-sum=app.app(a,b)
+sum1=add.add(a,b)
+sum2=minus.minus(a,b)
+sum3=times.times(a,b)
+sum4=divide.divide(a,b)
 
 
-count<=str(sum)
+count<=str(sum1)
+count<=str(sum2)
+count<=str(sum3)
+count<=str(sum4)
+
 
 </script>
 
