--- a/content/20170427.md
+++ b/content/20170427.md
@@ -120,7 +120,7 @@ sum3=times.times(a,b)
 sum4=divide.divide(a,b)
 
 
-count<=str("加",sum1)
+count<=str("加"sum1)
 count<=str(sum2)
 count<=str(sum3)
 count<=str(sum4)
