--- a/content/20170615.md
+++ b/content/20170615.md
@@ -14,3 +14,174 @@ Author: 40423103
 
 
 <iframe src="./../final/雙足.html" width="720" height="540"></iframe>
+
+
+###2. 在各自的網誌上, 以 "W17 行走機構 2D 靜態繪圖"為標題, 以 Brython 畫出行走機構的示意圖
+
+<!-- 導入 Brython 標準程式庫 -->
+
+<script src="../data/Brython-3.3.1/brython.js"></script>
+
+<script src="../data/Brython-3.3.1/brython_stdlib.js"></script>
+
+<!-- 啟動 Brython -->
+
+<script>
+window.onload=function(){
+// 設定 data/py 為共用程式路徑
+brython({debug:1, pythonpath:['./../data/py']});
+}
+</script>
+
+<!-- 以下實際利用  Brython 繪圖-->
+
+<canvas id="w17-1" width="800" height="800"
+style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas>
+
+<script>
+var c = document.getElementById("w17-1");
+var ctx = c.getContext("2d");
+
+ctx.moveTo(95,575);
+ctx.lineTo(95,550);
+ctx.lineTo(275,550);
+ctx.lineTo(275,50);
+ctx.lineTo(325,50);
+ctx.lineTo(325,150);
+ctx.lineTo(290,150);
+ctx.lineTo(290,550);
+ctx.lineTo(325,550);
+ctx.lineTo(325,654.5);
+ctx.lineWidth=3
+ctx.strokeStyle="#000000"
+ctx.stroke(); 
+
+ctx.beginPath();
+ctx.arc(325,278.82,375,0.5*Math.PI,0.711*Math.PI);
+ctx.stroke(); 
+
+ctx.moveTo(655,575);
+ctx.lineTo(655,550);
+ctx.lineTo(475,550);
+ctx.lineTo(475,50);
+ctx.lineTo(425,50);
+ctx.lineTo(425,150);
+ctx.lineTo(460,150);
+ctx.lineTo(460,550);
+ctx.lineTo(425,550);
+ctx.lineTo(425,654.5);
+ctx.lineWidth=3
+ctx.strokeStyle="#000000"
+ctx.stroke(); 
+
+ctx.beginPath();
+ctx.arc(425,278.82,375,0.289*Math.PI,0.5*Math.PI);
+ctx.stroke(); 
+
+ctx.moveTo(325,75);
+ctx.lineTo(425,75);
+ctx.moveTo(325,90);
+ctx.lineTo(425,90);
+ctx.lineWidth=3
+ctx.strokeStyle="#000000"
+ctx.stroke(); 
+
+ctx.font = "30px 微軟正黑體";
+ctx.fillText("W17 行走機構 2D 靜態繪圖",180,35); 
+
+</script>
+
+程式碼
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">
+
+<!-- 導入 Brython 標準程式庫 -->
+
+<script src="../data/Brython-3.3.1/brython.js"></script>
+
+<script src="../data/Brython-3.3.1/brython_stdlib.js"></script>
+
+<!-- 啟動 Brython -->
+
+<script>
+window.onload=function(){
+// 設定 data/py 為共用程式路徑
+brython({debug:1, pythonpath:['./../data/py']});
+}
+</script>
+
+<!-- 以下實際利用  Brython 繪圖-->
+
+<canvas id="w17-1" width="800" height="800"
+style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas>
+
+<script>
+var c = document.getElementById("w17-1");
+var ctx = c.getContext("2d");
+
+ctx.moveTo(95,575);
+ctx.lineTo(95,550);
+ctx.lineTo(275,550);
+ctx.lineTo(275,50);
+ctx.lineTo(325,50);
+ctx.lineTo(325,150);
+ctx.lineTo(290,150);
+ctx.lineTo(290,550);
+ctx.lineTo(325,550);
+ctx.lineTo(325,654.5);
+ctx.lineWidth=3
+ctx.strokeStyle="#000000"
+ctx.stroke(); 
+
+ctx.beginPath();
+ctx.arc(325,278.82,375,0.5*Math.PI,0.711*Math.PI);
+ctx.stroke(); 
+
+ctx.moveTo(655,575);
+ctx.lineTo(655,550);
+ctx.lineTo(475,550);
+ctx.lineTo(475,50);
+ctx.lineTo(425,50);
+ctx.lineTo(425,150);
+ctx.lineTo(460,150);
+ctx.lineTo(460,550);
+ctx.lineTo(425,550);
+ctx.lineTo(425,654.5);
+ctx.lineWidth=3
+ctx.strokeStyle="#000000"
+ctx.stroke(); 
+
+ctx.beginPath();
+ctx.arc(425,278.82,375,0.289*Math.PI,0.5*Math.PI);
+ctx.stroke(); 
+
+ctx.moveTo(325,75);
+ctx.lineTo(425,75);
+ctx.moveTo(325,90);
+ctx.lineTo(425,90);
+ctx.lineWidth=3
+ctx.strokeStyle="#000000"
+ctx.stroke(); 
+
+ctx.font = "30px 微軟正黑體";
+ctx.fillText("W17 行走機構 2D 靜態繪圖",180,35); 
+
+</script>
+</pre>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
